# xoak

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  design_notes.md  environment.yml  environment_doc.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: lint.yaml  test.yaml
binder/: postBuild
doc/: api.rst  conf.py  contribute.rst  index.rst  install.rst  modules.rst  release_notes.rst  xoak.rst
doc/examples/: custom_indexes.ipynb  dask_support.ipynb  index.rst  introduction.ipynb  query.ipynb
examples/: basic_examples.ipynb
src/xoak/: __init__.py  accessor.py  core.py
src/xoak/index/: __init__.py  balltree.py  base.py  s2_adapters.py  scipy_adapters.py  sklearn_adapters.py
src/xoak/indexes/: __init__.py  balltree.py  base.py
src/xoak/tests/: conftest.py  test_accessor.py  test_index_balltree.py  test_index_base.py  test_s2_adapters.py  test_scipy_adapters.py  test_sklearn_adapters.py
tests/: conftest.py  test_catesian_coords.py  test_catesian_coords_random_data.py  test_geo_coords.py  test_index_balltree.py  test_index_base.py  test_neighbors_strict.py  test_xoak.py
