[tool.poetry]
name = "xoak"
version = "0.1.0"
description = ""
authors = ["Benoît Bovy <bbovy@gfz-potsdam.de>", "Willi Rath <wrath@geomar.de>"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
xarray = "^0.15.1"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
