[tool.poetry]
name = "xoak"
version = "0.1.0"
description = "Xoak is a xarray extension that provides tree-based indexes used for selecting irregular, n-dimensional data."
authors = ["Benoît Bovy <bbovy@gfz-potsdam.de>", "Willi Rath <wrath@geomar.de>"]

[tool.poetry.dependencies]
python = "^3.6"
sklearn = "^0.0"
xarray = "^0.15.1"
numpy = "^1.19.0"
dask = {extras = ["array"], version = "^2.19.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"
black = "^19.10b0"
sphinx = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
